# mono

./: .bazelignore  .bazeliskrc  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  clean_duplicate_comments.py  delete_script.py  events.jsonl  fix.patch  fix.py  fix.sh  fix10.sh  fix11.sh  fix12.sh  fix2.py  fix_agents.py  fix_all.py  fix_api.py  fix_app_errors.py  fix_app_errors2.py  fix_app_errors3.py  fix_app_errors4.py  fix_app_test4.py  fix_auth.py  fix_auth2.py  fix_auth3.py  fix_auth_test.py  fix_build.py  fix_bzl.py  fix_coverage.py  fix_coverage.sh  fix_cuj.py  fix_cuj2.py  fix_cuj3.py  fix_cuj4.py  fix_cuj6.py  fix_cuj7.py  (+203 more)
bazel/rules/flutter/: .bazelignore  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  CONTRIBUTING.md  MODULE.bazel  README.md  go.mod  go.sum
deploy/: BUILD.bazel  README.md  deploy_dev.sh  docker-compose.yml  setup_k8s.sh
deploy/docker/backend/: Dockerfile
deploy/docker/frontend/: Dockerfile
deploy/docker/ohc-core/: Dockerfile
deploy/docker/postgres/: init-multiple-databases.sh
deploy/docker/prometheus/: prometheus.yml
deploy/helm/ohc/: Chart.yaml  values.yaml
deploy/tests/: deploy_artifacts_bazel_test.go  deploy_artifacts_test.sh  kind_e2e_test.sh  kind_helm_e2e_bazel_test.go  kind_helm_e2e_test.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
examples/hello-world-agent/: BUILD.bazel  README.md  hello_world_agent.yaml  main.go
release/: BUILD.bazel  flutter_build.sh
src/security/: BUILD.bazel  exploit_test.go
srcs/agents/: BUILD.bazel  coverage_test.go  provider.go  provider_test.go  registry.go
srcs/app/: BUILD.bazel  README.md  pub_deps.json  pubspec.yaml
srcs/app/coverage/: lcov.info
srcs/app/e2e/: capture_screenshots.mjs  chaos.spec.ts  chaos_test.spec.ts  chaos_test.spec.ts.orig  handoff.spec.ts  playwright.config.ts  web.spec.ts
srcs/app/lib/: main.dart  router.dart  theme.dart
srcs/app/test/: advanced_widget_test.dart  api_service_test.dart  bazel_helpers.sh  capture_screenshots.sh  centrifuge_service_full_test.dart  chaos_test.sh  desktop_e2e_test.dart  flutter_coverage_check.sh  flutter_layout_test.sh  flutter_single_test.sh  (+8 more)
srcs/auth/: BUILD.bazel  README.md  auth_extra_test.go  auth_test.go  coverage_test.sh  export_test.go  handlers.go  handlers_test.go  jwt.go  jwt_extra_test.go  jwt_test.go  middleware.go  oidc.go  oidc_test.go  store.go
srcs/billing/: BUILD.bazel  README.md  tracker.go  tracker_test.go
srcs/capability/: BUILD.bazel  capability.go  capability_test.go
srcs/checkpointer/: BUILD.bazel  README.md  checkpointer.go  checkpointer_test.go
srcs/core/: Cargo.toml  README.md
srcs/dashboard/: BUILD.bazel  README.md  benchmark_test.go  events.jsonl  handlers_agent.go  handlers_analytics.go  handlers_approvals.go  handlers_b2b.go  handlers_b2b_extra_test.go  handlers_budget.go  handlers_chat.go  handlers_compute.go  handlers_dashboard.go  handlers_handoffs.go  handlers_identities.go  handlers_incidents.go  handlers_integration.go  handlers_integrations.go  handlers_marketplace.go  handlers_mcp.go  handlers_mcp.go.orig  handlers_mcp_extra_test.go  handlers_mcp_test.go  handlers_memory_test.go  handlers_missions.go  handlers_ops.go  handlers_ops.go.rej  handlers_ops_benchmark_test.go  handlers_ops_extra_test.go  handlers_ops_test.go  handlers_org.go  handlers_pipelines.go  handlers_plugins.go  handlers_plugins_test.go  handlers_scheduler.go  handlers_scheduler_test.go  handlers_scheduler_test.go.orig  handlers_scheduler_test.go.rej  handlers_seed.go  handlers_skills.go  (+16 more)
srcs/domain/: BUILD.bazel  README.md  agent.go  b2b.go  b2b_test.go  blueprint.go  blueprint_test.go  compute.go  compute_test.go  federation.go  federation_test.go  message.go  organization.go  organization_test.go  sre.go  sre_test.go  types.go
srcs/frontend/: BUILD.bazel  README.md  index.html  package-lock.json  package.json  playwright.config.ts  reporter.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vitest.config.ts
srcs/integration/: BUILD.bazel  README.md  agent_interaction_test.go  chaos_e2e_test.go  feature_integration_test.go  frontend_backend_test.go  minimax_e2e_test.go
srcs/integrations/: BUILD.bazel  README.md  registry.go  registry_test.go
srcs/interop/: BUILD.bazel  README.md  autogen_adapter.go  crewai_adapter.go  ironclaw_adapter.go  ironclaw_adapter_test.go  openclaw_adapter.go  semantickernel_adapter.go  swarm_test.go  types.go  types_test.go  types_test.go.patch
srcs/marketplace/: BUILD.bazel  importer.go  importer_test.go
srcs/minimax/: BUILD.bazel  minimax.go  minimax_test.go
srcs/orchestration/: BUILD.bazel  BUILD.bazel.rej  README.md  agent_logic.go  auth_interceptor.go  auth_interceptor_test.go  b2b_gateway.go  b2b_gateway_test.go  benchmark_test.go  benchmark_test.go.orig  builder_test.go  centrifuge_hub.go  centrifuge_hub_test.go  chaos_test.go  chaos_verifier.py  chaos_verifier.sh  cve_2026_001_test.go  delegation.go  delegation.go.orig  delegation_test.go  episodic_memory_test.go  eventlog_test.go  events.jsonl  handlers_mcp.go  minimax_client_test.go  minimax_test.go  security_exploit_test.go  service.go  service.go.orig  service_bench_test.go  service_extra_test.go  service_grpc_test.go  service_test.go  service_test_extra.go  sip.go  sip_extra_test.go  sip_mesh_test.go  sip_plugin_test.go  sip_poll.go  sip_test.go  (+3 more)
srcs/pipeline/: BUILD.bazel  README.md  pipeline.go  pipeline_test.go
srcs/proto/: BUILD.bazel  README.md  agent.proto  app.proto  billing.proto  common.proto  doc.go  generate_ts.js  hub.pb.go  hub.proto  hub_grpc.pb.go  organization.proto  proto_layout_test.sh  skills.proto
srcs/scheduler/: BUILD.bazel  README.md  scheduler.go  scheduler_test.go
srcs/sip/: BUILD.bazel  chaos_test.go  message.go  sip.go  sip.go.orig  sip.go.patch  sip_extra_test.go  sip_extra_test.go.orig  sip_extra_test.go.patch  sip_mesh_test.go  sip_test.go  sip_test.go.orig  sip_test.go.patch  sip_test.go.rej
srcs/telemetry/: BUILD.bazel  README.md  telemetry.go  telemetry_test.go
(+781 files in other folders)
