load("@gazelle//:def.bzl", "gazelle")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")
exports_files(["tsconfig.json"])

# gazelle:prefix github.com/onehumancorp/mono
exports_files([
    "go.mod",
    "go.sum",
])

# gazelle:exclude srcs/proto
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=repositories.bzl%go_repositories",
        "-prune",
    ],
    command = "update-repos",
)

sh_binary(
    name = "deploy_dev",
    srcs = ["//deploy:deploy_dev.sh"],
    data = [
        "//deploy:backend_load",
        "//deploy:docker-compose.yml",
        "//deploy:frontend_load",
        "//deploy:setup_k8s.sh",
    ],
    tags = ["manual"],
)

# Alias to start the local developer environment quickly.
alias(
    name = "up",
    actual = ":deploy_dev",
)

# Alias to run tests
alias(
    name = "e2e",
    actual = "//deploy:kind_e2e_test",
    visibility = ["//visibility:public"],
)

# Alias to run hello-world agent easily
alias(
    name = "hello-world",
    actual = "//examples/hello-world-agent:hello-world",
)
