module(
    name = "mono",
    version = "0.1.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_shell", version = "0.7.1")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")

# ── Flutter rules (vendored fork) ─────────────────────────────────────────────
bazel_dep(name = "rules_flutter", version = "0.0.0")
local_path_override(
    module_name = "rules_flutter",
    path = "bazel/rules/flutter",
)

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.29.3")
use_repo(
    flutter,
    "flutter_sdk",
    "flutter_toolchains",
)

register_toolchains("@flutter_toolchains//:all")

pub = use_extension("@rules_flutter//flutter:extensions.bzl", "pub")
use_repo(
    pub,
    "pub_async",
    "pub_boolean_selector",
    "pub_centrifuge",
    "pub_characters",
    "pub_clock",
    "pub_collection",
    "pub_crypto",
    "pub_cupertino_icons",
    "pub_fake_async",
    "pub_ffi",
    "pub_file",
    "pub_fixnum",
    "pub_flutter_lints",
    "pub_flutter_riverpod",
    "pub_go_router",
    "pub_http",
    "pub_http_parser",
    "pub_intl",
    "pub_leak_tracker",
    "pub_leak_tracker_flutter_testing",
    "pub_leak_tracker_testing",
    "pub_lints",
    "pub_logging",
    "pub_matcher",
    "pub_material_color_utilities",
    "pub_meta",
    "pub_mocktail",
    "pub_path",
    "pub_path_provider_linux",
    "pub_path_provider_platform_interface",
    "pub_path_provider_windows",
    "pub_platform",
    "pub_plugin_platform_interface",
    "pub_protobuf",
    "pub_riverpod",
    "pub_shared_preferences",
    "pub_shared_preferences_android",
    "pub_shared_preferences_foundation",
    "pub_shared_preferences_linux",
    "pub_shared_preferences_platform_interface",
    "pub_shared_preferences_web",
    "pub_shared_preferences_windows",
    "pub_source_span",
    "pub_stack_trace",
    "pub_state_notifier",
    "pub_stream_channel",
    "pub_string_scanner",
    "pub_term_glyph",
    "pub_test_api",
    "pub_typed_data",
    "pub_uuid",
    "pub_vector_math",
    "pub_vm_service",
    "pub_web",
    "pub_web_socket_channel",
    "pub_xdg_directories",
)
# ─────────────────────────────────────────────────────────────────────────────

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "23.6.0")
use_repo(node, "nodejs")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Fix for centrifuge's vtprotobuf-generated files: disable proto-library generation
# so that control.pb.go and control_vtproto.pb.go are included together in the
# same go_library target instead of separate proto_library / go_proto_library rules.
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/centrifugal/centrifuge",
)

# Fix for centrifugal/protocol: disable proto-library generation so that
# client.pb.go, client.pb_easyjson.go, and client_vtproto.pb.go are all
# compiled together in one go_library target.
go_deps.gazelle_override(
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/centrifugal/protocol",
)
use_repo(go_deps, "com_github_centrifugal_centrifuge", "com_github_google_uuid", "com_github_prometheus_client_golang", "in_gopkg_yaml_v3", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_prometheus", "io_opentelemetry_go_otel_metric", "io_opentelemetry_go_otel_sdk_metric", "org_golang_google_grpc", "org_golang_google_grpc_cmd_protoc_gen_go_grpc", "org_golang_google_protobuf", "org_golang_x_crypto", "org_modernc_sqlite")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

platforms_host = use_extension("@platforms//host:extension.bzl", "host_platform")
use_repo(platforms_host, "host_platform")

bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")
buildbuddy.gcc_toolchain()
use_repo(buildbuddy, "buildbuddy_toolchain")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    image = "gcr.io/distroless/static",
    platforms = ["linux/amd64"],
    tag = "latest",
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64")
bazel_dep(name = "rules_android", version = "0.1.1")
single_version_override(module_name = "rules_android", version = "0.1.1")
