load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files([
    "deploy_dev.sh",
    "docker-compose.yml",
    "setup_k8s.sh",
])

# ── server image (onehumancorp/server) ────────────────────────────────────────

# Package backend binary
pkg_tar(
    name = "backend_pkg",
    srcs = ["//srcs/cmd/ohc"],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "backend_image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/ohc"],
    tars = [":backend_pkg"],
)

oci_load(
    name = "backend_load",
    image = ":backend_image",
    repo_tags = ["onehumancorp/mono-backend:bazel"],
    visibility = ["//visibility:public"],
)

# Published as onehumancorp/server – the canonical backend server image.
oci_image(
    name = "server_image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/ohc"],
    tars = [":backend_pkg"],
)

oci_load(
    name = "server_load",
    image = ":server_image",
    repo_tags = ["onehumancorp/server:bazel"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "server_push",
    image = ":server_image",
    repository = "ghcr.io/onehumancorp/server",
    visibility = ["//visibility:public"],
)

# ── agent image (onehumancorp/agent) ──────────────────────────────────────────
# The agent image bundles the ironclaw CLI alongside the ohc server binary so
# that any specialised AI agent container can be started from this base.

pkg_tar(
    name = "agent_pkg",
    srcs = [
        "//srcs/cmd/ironclaw",
        "//srcs/cmd/ohc",
    ],
    package_dir = "/usr/local/bin",
)

oci_image(
    name = "agent_image",
    base = "@distroless_static",
    # The agent container runs the ohc server; the ironclaw binary is available
    # as a sidecar tool inside the container.
    entrypoint = ["/usr/local/bin/ohc"],
    tars = [":agent_pkg"],
)

oci_load(
    name = "agent_load",
    image = ":agent_image",
    repo_tags = ["onehumancorp/agent:bazel"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "agent_push",
    image = ":agent_image",
    repository = "ghcr.io/onehumancorp/agent",
    visibility = ["//visibility:public"],
)

# Build frontend static assets in a rule
# Note: npm build in a genrule is slightly discouraged but kept here for simplicity
# unless we move to rules_js.
# Build frontend static assets in a rule using the hermetic Node.js toolchain
genrule(
    name = "frontend_static_assets",
    srcs = [
        "//srcs/frontend:all_srcs",
        "//srcs/frontend:node_modules",
    ],
    outs = ["frontend_dist.tar"],
    cmd = """
        export HOME=/tmp
        # Use the hermetic node/npm from the toolchain
        # rules_js handles the PATH automatically if we use its rules, 
        # but for a genrule we'll point to the linked node_modules/.bin
        # Pick the node binary from the toolchain locations
        LOCS=($(locations @rules_nodejs//nodejs:current_node_toolchain))
        for loc in "$${LOCS[@]}"; do
            if [[ $$loc == */node ]]; then
                NODE_EXE=$$(realpath $$loc)
                break
            fi
        done
        NODE_BIN=$$(dirname $$NODE_EXE)
        export PATH=$$NODE_BIN:$$PATH
        cd srcs/frontend
        # npm install is NOT needed because rules_js linked everything
        npm run build
        tar -C dist -cf ../../$@ .
    """,
    tags = [
        "local",
        "no-remote-exec",
    ],
    tools = ["@rules_nodejs//nodejs:current_node_toolchain"],
)

pkg_tar(
    name = "frontend_server_pkg",
    srcs = ["//srcs/frontend/server/cmd/frontend"],
    package_dir = "/usr/local/bin",
)

# Combine static assets and server binary
oci_image(
    name = "frontend_image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/frontend"],
    tars = [
        ":frontend_server_pkg",
        ":frontend_static_assets",
    ],
)

oci_load(
    name = "frontend_load",
    image = ":frontend_image",
    repo_tags = ["onehumancorp/mono-frontend:bazel"],
    visibility = ["//visibility:public"],
)

# ── ui image (onehumancorp/ui) ────────────────────────────────────────────────
# Published as onehumancorp/ui – the canonical frontend image.

oci_image(
    name = "ui_image",
    base = "@distroless_static",
    entrypoint = ["/usr/local/bin/frontend"],
    tars = [
        ":frontend_server_pkg",
        ":frontend_static_assets",
    ],
)

oci_load(
    name = "ui_load",
    image = ":ui_image",
    repo_tags = ["onehumancorp/ui:bazel"],
    visibility = ["//visibility:public"],
)

oci_push(
    name = "ui_push",
    image = ":ui_image",
    repository = "ghcr.io/onehumancorp/ui",
    visibility = ["//visibility:public"],
)

sh_test(
    name = "deploy_artifacts_test",
    srcs = ["tests/deploy_artifacts_test.sh"],
    data = glob([
        "docker/**/*",
        "helm/ohc/**",
        "docker-compose.yml",
    ]) + ["BUILD.bazel"],
)

# End-to-end smoke test against a real Kind cluster.
# Requires kind, helm, kubectl, docker, curl on PATH.
# Run with: bazel test //deploy:kind_e2e_test
sh_test(
    name = "kind_e2e_test",
    size = "large",
    srcs = ["tests/kind_e2e_test.sh"],
    data = glob([
        "docker/**/*",
        "helm/ohc/**",
        "docker-compose.yml",
    ]) + [
        "//:go.mod",
        "//srcs/cmd/ohc",
    ],
    tags = [
        "large",
        "manual",
        "no-remote-exec",
        "requires-docker",
    ],
    visibility = ["//visibility:public"],
)
