# Cross-platform release packaging.
#
# Binary archives (ironclaw CLI + ohc server):
#   bazelisk build //release:ironclaw-x86_64-unknown-linux-gnu
#   bazelisk build //release:all_ironclaw_archives
#
# Flutter mobile / desktop apps (require Flutter SDK on PATH):
#   bazelisk run  //release:flutter-build-android-apk
#   bazelisk run  //release:flutter-build-android-aab
#   bazelisk run  //release:flutter-build-ios          # macOS only
#   bazelisk run  //release:flutter-build-macos        # macOS only
#   bazelisk run  //release:flutter-build-windows      # Windows only
#   bazelisk run  //release:flutter-build-linux
#   bazelisk run  //release:flutter-build-web
#
# All Flutter targets at once:
#   bazelisk run  //release:flutter-build-all
#
# The GitHub Actions release workflow (`.github/workflows/release.yml`) uses
# these targets to produce artifacts that are uploaded to GitHub Releases.

load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

# ── Linux x86_64 ──────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_linux_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_linux_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_linux_amd64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-unknown-linux-gnu",
    srcs = [":ironclaw_linux_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Linux aarch64 ─────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_linux_arm64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_linux_arm64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_linux_arm64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-aarch64-unknown-linux-gnu",
    srcs = [":ironclaw_linux_arm64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── macOS x86_64 (Intel) ──────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_darwin_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_darwin_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_darwin_amd64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-apple-darwin",
    srcs = [":ironclaw_darwin_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── macOS aarch64 (Apple Silicon) ─────────────────────────────────────────────

pkg_files(
    name = "ironclaw_darwin_arm64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_darwin_arm64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_darwin_arm64": "ironclaw"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-aarch64-apple-darwin",
    srcs = [":ironclaw_darwin_arm64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Windows x86_64 ────────────────────────────────────────────────────────────

pkg_files(
    name = "ironclaw_windows_amd64_files",
    srcs = ["//srcs/cmd/ironclaw:ironclaw_windows_amd64"],
    renames = {"//srcs/cmd/ironclaw:ironclaw_windows_amd64": "ironclaw.exe"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ironclaw-x86_64-pc-windows-msvc",
    srcs = [":ironclaw_windows_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Convenience alias ─────────────────────────────────────────────────────────
# Build all platform archives in one shot.

filegroup(
    name = "all_ironclaw_archives",
    srcs = [
        ":ironclaw-aarch64-apple-darwin",
        ":ironclaw-aarch64-unknown-linux-gnu",
        ":ironclaw-x86_64-apple-darwin",
        ":ironclaw-x86_64-pc-windows-msvc",
        ":ironclaw-x86_64-unknown-linux-gnu",
    ],
    visibility = ["//visibility:public"],
)

# ── Server (ohc) cross-platform packaging ─────────────────────────────────────
# Mirrors the ironclaw layout for the backend server binary.

pkg_files(
    name = "ohc_linux_amd64_files",
    srcs = ["//srcs/cmd/ohc"],
    renames = {"//srcs/cmd/ohc:ohc": "ohc"},
    strip_prefix = strip_prefix.from_pkg(),
)

pkg_tar(
    name = "ohc-x86_64-unknown-linux-gnu",
    srcs = [":ohc_linux_amd64_files"],
    extension = "tar.gz",
    visibility = ["//visibility:public"],
)

# ── Flutter app release targets ───────────────────────────────────────────────
# Each sh_binary wraps `flutter build <platform>` so releases can be triggered
# with a single Bazel command from the repository root, e.g.:
#
#   bazelisk run //release:flutter-build-android-apk
#
# All targets are tagged "manual" so they are excluded from `bazelisk test //...`
# (they require a Flutter SDK and, for mobile/desktop targets, the corresponding
#  native SDK / toolchain on the host machine).

exports_files(
    [
        "flutter_build.sh",
    ],
    visibility = ["//visibility:public"],
)

# Android – APK (side-loadable)
sh_binary(
    name = "flutter-build-android-apk",
    srcs = ["flutter_build.sh"],
    args = ["apk"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# Android – App Bundle (Play Store)
sh_binary(
    name = "flutter-build-android-aab",
    srcs = ["flutter_build.sh"],
    args = ["appbundle"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# iOS (requires macOS + Xcode)
sh_binary(
    name = "flutter-build-ios",
    srcs = ["flutter_build.sh"],
    args = ["ios"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# macOS desktop (requires macOS + Xcode)
sh_binary(
    name = "flutter-build-macos",
    srcs = ["flutter_build.sh"],
    args = ["macos"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# Windows desktop (requires Windows + MSVC)
sh_binary(
    name = "flutter-build-windows",
    srcs = ["flutter_build.sh"],
    args = ["windows"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# Linux desktop
sh_binary(
    name = "flutter-build-linux",
    srcs = ["flutter_build.sh"],
    args = ["linux"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# Web
sh_binary(
    name = "flutter-build-web",
    srcs = ["flutter_build.sh"],
    args = ["web"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)

# Convenience alias – build every Flutter platform in one shot.
# Usage: bazelisk run //release:flutter-build-all
sh_binary(
    name = "flutter-build-all",
    srcs = ["flutter_build.sh"],
    args = ["all"],
    data = ["//srcs/app:srcs"],
    tags = [
        "manual",
        "no-remote-exec",
        "requires-network",
    ],
    visibility = ["//visibility:public"],
)
